# optiprofiler

./: .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  REFACTOR_PLAN.md  SETUP_FUNCTIONALITY.txt  THIRD_PARTY_NOTICES.md  azure-pipelines.yml  conftest.py  pyproject.toml  setup.m  setup_new.m
.circleci/: config.yml
.github/: CODEOWNERS  RELEASE_CHECKLIST.md
.github/actions/spelling/: allow.txt  excludes.txt  expect.txt  patterns.txt
.github/actions/test-python/: install-cutest-linux.sh  install-cutest-macos.sh  install-cutest.sh  run-tests.sh
.github/workflows/: build.yml  codecov.yml  codeql.yml  doc.yml  gh-pages.yml  matlab-package.yml  matlab-problem-library-contract.yml  matlab-problem-library-integration.yml  matlab-random_test.yml  matlab-stress_test.yml  matlab-test_multi-os.yml  matlab-unit_test.yml  problem-library-integration.yml  python-random_test.yml  python-stress_test.yml  python-test_multi-os.yml  python-unit_test.yml  spelling.yml  test-matlab.yml  test-parallel.yml  test-python.yml  test-windows.yml
doc/: Makefile
doc/source/: conf.py  index.rst  license.rst
doc/source/_static/: custom.css  optiprofiler.bib  system-theme.js
doc/source/_templates/: footer.html
doc/source/dev/: features.rst  index.rst  problem_libraries.rst  problems.rst  profiles.rst  utils.rst
doc/source/matlab/: index.rst
doc/source/ref/: index.rst
doc/source/user/: index.rst  installation.rst  problem_libraries.rst  usage.rst  usage_python.rst
matlab/OptiProfiler/: Problem.m  TestProblem.m  cobertura.xml  cub.m  example.m  runTests.m  testplot.m
matlab/OptiProfiler/figure/: stamp.perf_4.backtrack.feature_and_time.eps
matlab/OptiProfiler/src/: Feature.m  FeatureName.m  FeatureOptionKey.m  FeaturedProblem.m  NoiseType.m  OptionKey.m  Problem.m  ProblemOptionKey.m  ProfileOptionKey.m  createProfiles.m  drawLogRatioProfiles.m  drawPerformanceDataProfiles.m  drawProfile.m  drawProfiles.m  getExtendedPerformancesDataProfileAxes.m  getPerformanceDataProfileAxes.m  loadCutest.m  profileAxes.m  profileinprima.m  runAllInOne.m  runBenchmark.m  runBenchmarks.m  solveAll.m  solveAllProblems.m  solveOne.m  solveOneProblem.m  x_profile.m  y_profile.m
matlab/OptiProfiler/tests/: TestFeature.m  TestFeatureName.m  TestFeatureOptionKey.m  TestFeaturedProblem.m  TestNoiseType.m  TestOptionKey.m  TestProblem.m  TestProblemOptionKey.m  TestProfileOptionKey.m  TestSolveAll.m  TestSolveOne.m  alwaysError.m  runTestsAndGenerateCoverageReport.m
matlab/examples/: OPM_loader.m  basic.m  basic_usage.m  compareOneProblem.m  custom.m  custom1.m  custom2.m  custom3.m  custom4.m  custom_feature.m  example.m  example1.m  example2.m  example3.m  example4.m  example5.m  example6.m  getMFileNames.m  hyperparameterized_solver.m  parameterized_solver.m  self_comparison.m  solver1.m  solver2.m  test.m  testOneProblem.m  testOptiProfiler.m  use_load.m
matlab/optiprofiler/: example.m  runTests.m
matlab/optiprofiler/TestProblemSet/: test1.m
matlab/optiprofiler/probinfo_s2mpj/: error_list.txt  exclude_list.txt  getInfo.m  loader.m  probinfo.csv  probinfo.mat  probinfo.txt  s2mpjlib.m  s_load.m  s_select.m  selector.m
matlab/optiprofiler/problem_libs/: README.txt
matlab/optiprofiler/src/: CutestOptionKey.m  Feature.m  FeatureName.m  FeatureOptionKey.m  FeaturedProblem.m  NoiseType.m  OtherOptionKey.m  Problem.m  ProblemOptionKey.m  ProfileOptionKey.m  benchmark.m  checkValidityCutestOptions.m  checkValidityOtherOptions.m  checkValidityProblemOptions.m  checkValidityProfileOptions.m  compareOneProblem.m  computeMeritValues.m  dataTicks.m  drawFunMaxcvMeritHist.m  drawHist.m  drawLogRatioProfiles.m  drawPerformanceDataProfiles.m  drawProfiles.m  formatFloatScientificLatex.m  getDefaultCutestOptions.m  getDefaultOtherOptions.m  getDefaultProblemOptions.m  getDefaultProfileOptions.m  getExtendedPerformancesDataProfileAxes.m  getLogRatioProfileAxes.m  getPerformanceDataProfileAxes.m  ischarstr.m  isintegerscalar.m  isintegervector.m  islogicalscalar.m  isrealcolumn.m  isrealmatrix.m  isrealrow.m  isrealscalar.m  loadCutest.m  (+13 more)
matlab/optiprofiler/tests/: TestBenchmark.m  TestCheckValidityProfileOptions.m  TestCutestOptionKey.m  TestFeature.m  TestFeatureName.m  TestFeatureOptionKey.m  TestFeaturedProblem.m  TestFormatFloatScientificLatex.m  TestGetExtendedPerformancesDataProfileAxes.m  TestGetPerformanceDataProfileAxes.m  TestNoiseType.m  TestOtherOptionKey.m  TestProblem.m  TestProblemOptionKey.m  TestProfileOptionKey.m  TestSolveAll.m  TestSolveOne.m  alwaysCell.m  testOptiProfiler.m
output/test/interior_point_sqp_ub_1_2_0_27_linearly_transformed_rotated_12.7116_20250602_162020/: README.txt
problems/: README.txt  readme.txt  utils.py
problems/custom/: __init__.py  custom_getInfo.m  custom_info.mat  custom_select.m  custom_tools.py
problems/custom/matlab_problems/: custom3.m  custom4.m  toy_example.m
problems/custom/python_problems/: custom1.py  custom3.py  custom4.py
problems/custom_example/: custom_example_getInfo.m  custom_example_info.mat  custom_example_load.m  custom_example_select.m
problems/matcutest/: config.txt  m_load.m  m_select.m  matcutest_load.m  matcutest_select.m
problems/pycutest/: __init__.py  config.txt  probinfo_pycutest.csv  pycutest_tools.py
problems/s2mpj/: __init__.py  config.txt  probinfo.csv  probinfo.mat  probinfo.txt  probinfo_matlab.csv  probinfo_matlab.mat  probinfo_python.csv  s2mpj_load.m  s2mpj_select.m  s2mpj_tools.py  s_load.m  s_select.m
python/: test.py
python/OptiProfiler/: __init__.py  features.py  problems.py  profiles.py  settings.py  solvers.py  utils.py
python/examples/: scipy_cobyqa_wrapper.py  simple.py
python/optiprofiler/: __init__.py  features.py  loader.py  modules.py  opclasses.py  plib_config.py  plotting.py  problem_libraries.py  problems.py  profile_utils.py  profiles.py  test.py  utils.py
test/: pyvenv.cfg
tools/: build_matlab_zip.py  check_matlab_problem_libraries_lock.py  check_matlab_zip.py  check_problem_libraries_lock.py  smoke_matlab_zip.m
(+1665 files in other folders)
