[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OptiProfiler"
description = "Benchmarking optimization solvers"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
maintainers = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "numpydoc==1.6.0",
    "Sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-rtd-theme==1.3.0",
    "sphinxcontrib.bibtex==2.5.0",
]
extra = ["pycutest>=1.5.0"]
tests = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.dynamic]
version = {attr = "OptiProfiler.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["OptiProfiler*"]
