[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optiprofiler"
description = "Benchmarking optimization solvers"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
maintainers = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "matplotlib>=3.4.0",
    "numpy>=1.17.0",
    "scipy>=1.10.0",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "numpydoc==1.7.0",
    "Sphinx==7.3.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-book-theme==1.1.2",
    "sphinxcontrib-bibtex==2.6.2",
]
extra = ["pycutest>=1.6.1"]
tests = [
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = "https://www.optprof.com"
documentation = "https://www.optprof.com"
source = "https://github.com/optiprofiler/optiprofiler"
download = "https://pypi.org/project/optiprofiler/#files"
tracker = "https://github.com/optiprofiler/optiprofiler/issues"

[tool.setuptools.dynamic]
version = {attr = "optiprofiler.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["optiprofiler*"]
