[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optiprofiler"
description = "Benchmarking optimization solvers"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
maintainers = [
    {name = "Cunxin Huang", email = "cun-xin.huang@connect.polyu.hk"},
    {name = "Tom M. Ragonneau", email = "tom.ragonneau@polyu.edu.hk"},
    {name = "Zaikun Zhang", email = "zaikun.zhang@polyu.edu.hk"},
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "matplotlib>=3.4.0",
    "numpy>=1.17.0",
    "scipy>=1.10.0",
    "pandas>=1.1.0",
    "h5py>=3.0.0",
    "pypdf>=3.8.0",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "numpydoc==1.7.0",
    "Sphinx==7.3.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-book-theme==1.1.2",
    "sphinx-design==0.5.0",
    "sphinxcontrib-bibtex==2.6.2",
    "sphinxcontrib-matlabdomain",
    "sphinxext-opengraph",
]
extra = ["pycutest>=1.6.1"]
tests = [
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = "https://www.optprof.com"
documentation = "http://www.optprof.com"
source = "https://github.com/optiprofiler/optiprofiler"
download = "https://pypi.org/project/optiprofiler/#files"
tracker = "https://github.com/optiprofiler/optiprofiler/issues"

[tool.setuptools.dynamic]
version = {attr = "optiprofiler.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["optiprofiler*"]

[tool.setuptools.package-data]
"optiprofiler.problem_libs.s2mpj" = [
    "config.txt",
    "probinfo_python.csv",
    "README.md",
]
"optiprofiler.problem_libs.s2mpj.src" = [
    "*.py",
    "list_of_python_problems",
]
"optiprofiler.problem_libs.s2mpj.src.python_problems" = ["*.py"]
"optiprofiler.problem_libs.pycutest" = [
    "config.txt",
    "probinfo_pycutest.csv",
    "README.md",
]
"optiprofiler.problem_libs.custom" = ["*.py", "README.txt"]
"optiprofiler.problem_libs" = ["README.txt"]

[tool.setuptools.exclude-package-data]
"*" = [
    ".git*",
    ".DS_Store",
    "__pycache__",
    "__pycutest_cache__",
]

[tool.pytest.ini_options]
testpaths = ["python/optiprofiler/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "extra: mark test as requiring extra dependencies (pycutest)",
]
norecursedirs = ["action_tests"]

[tool.coverage.run]
source_pkgs = ["optiprofiler"]
omit = [
    "*/problem_libs/*",
    "*/tests/*",
    "*/action_tests/*",
]
